# nrbf

./: README.md  pyproject.toml  tox.ini
nrbf/: nrbf.py
nrbf/helpers/: c_nrbf.py  descriptors.py  dynamic_defs.py  exceptions.py
nrbf/utils/: nrbf_extract.py
tests/: test_response.py  test_send.py
